[tool.poetry]
name = "bitbucket-python"
version = "0.3.0"
description = "API wrapper for Bitbucket written in Python"
authors = ["Miguel Ferrer <ingferrermiguel@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "bitbucket"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
httpx = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

